--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <commons-lang3.version>3.2</commons-lang3.version>
     <exoplatform.version>4.2.x-SNAPSHOT</exoplatform.version>
     <javax.enterprise.cdi.version>1.0-SP4</javax.enterprise.cdi.version>
-    <juzu.version>1.0.0</juzu.version>
+    <juzu.version>1.1.x-SNAPSHOT</juzu.version>
     <mongodb-java-driver.version>2.12.2</mongodb-java-driver.version> 
   </properties>
   <dependencyManagement>
